objects/tffa__TaxReturn__c.object
<CustomObject>
    <description>Captures tax filing  information related to an applicant from IRS records. Comprises of the period, exemptions if any, total tax due and refund amount if any. Other income records are modelled in Income object.</description>
    <fields>
        <fullName>tffa__DueAmount__c</fullName>
        <description>total tax due amount</description>
        <label>Due amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__FilingExemptionNumber__c</fullName>
        <description>The number of exemptions applicant has claimed</description>
        <label>Filing exemption number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__FilingStatus__c</fullName>
        <description>One of 5 Filing Status options Single | Married Filed Jointly |Head of Household (with qualifying person) |Head of Household (with qualifying person) | Qualifying Widow(er) with dependent child</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Filing status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialYear__c</fullName>
        <description>Financial year for which data is captured as per tax records.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to parent party object</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>TaxReturns</relationshipLabel>
        <relationshipName>TaxReturns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Provider__c</fullName>
        <description>The provider of the income tax record.For an aggregator, it will store the name of the aggregator and source will store the actual source/platform used within the aggregator.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RefundAmount__c</fullName>
        <description>total refund amount as per IRS</description>
        <label>Refund amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this tax return data if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__TaxableIncome__c</fullName>
        <description>Taxable income of the applicant for the given financial period as per IRS records</description>
        <label>Taxable income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TrackingNumber__c</fullName>
        <description>Unique transcript tracking number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TaxReturn</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>TaxReturn Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Returns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>